Mais algumas aulas assistidas.. E Exercicios realizados

--- a/HTML-CSS-JS/ProjetoFashion/css/estilo.css
+++ b/HTML-CSS-JS/ProjetoFashion/css/estilo.css
@@ -61,6 +61,7 @@ body {
     font-style: normal;
     text-decoration: solid;
     text-transform: uppercase;
+    transition: color .25s linear;
 }
 
 .but a:hover{
