--- a/WebPack/LazyLoad/Images/style.css
+++ b/WebPack/LazyLoad/Images/style.css
@@ -22,7 +22,48 @@ p{
     margin: 30px 0;
 }
 
+img{
+    width: 100%;
+    display: block;
+    object-position: center;
+    object-fit: cover;
+    margin: 10px 0 ;
+}
+
 .blur-load{
     position: relative;
-    background-image: ;
+    background-size: cover;
+    background-position: center;
+}
+
+.blur-load::before{
+    content: "";
+    position: absolute;
+    inset: 0;
+    animation: pulse 2.5s infinite;
+}
+
+@keyframes pulse{
+    0%{
+        background-color: rgba(255,255,255,0);
+    }
+    50%{
+        background-color: rgba(255,255,255,0.1);
+    }
+    100%{
+        background-color: rgba(255,255,255,0);
+    }
+}
+
+.blur-load.loaded::before{
+    content: none;
+}
+
+.blur-load > img{
+    opacity: 0;
+    transition: opacity 200ms ease-in-out;
+}
+
+.blur-load.loaded > img{
+    opacity: 1;
 }
